static/css/style.css
@font-face {
  font-family: 'icomoon';
  src: url("../fonts/icomoon/icomoon.eot?srf3rx");
  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
  font-weight: normal;
  font-style: normal;
}
/* =======================================================
*
* 	Template Style 
*
* ======================================================= */
* {
  box-sizing: border-box;
}

body {
  font-family: "Inconsolata", Arial, sans-serif;
  font-weight: 400;
  font-size: 18px;
  line-height: 1.7;
  color: #333333;
  background: #fff;
}

#page {
  position: relative;
  overflow-x: hidden;
  width: 100%;
  height: 100%;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}
.offcanvas #page {
  overflow: hidden;
  position: absolute;
}
.offcanvas #page:after {
  -webkit-transition: 2s;
  -o-transition: 2s;
  transition: 2s;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 101;
  background: rgba(0, 0, 0, 0.7);
  content: "";
}

a {
  color: #DD356E;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}
a:hover, a:active, a:focus {
  color: #DD356E;
  outline: none;
  text-decoration: none;
}

p {
  margin-bottom: 30px;
}

h1, h2, h3, h4, h5, h6, figure {
  color: #000;
  font-family: "Inconsolata", Arial, sans-serif;
  font-weight: 400;
  margin: 0 0 20px 0;
}

::-webkit-selection {
  color: #fff;
  background: #DD356E;
}

::-moz-selection {
  color: #fff;
  background: #DD356E;
}

::selection {
  color: #fff;
  background: #DD356E;
}

.fpgportfolio-nav {
  background: #fff;
}
.fpgportfolio-nav .top-menu {
  padding: 28px 0;
}
.fpgportfolio-nav #fpgportfolio-logo {
  font-size: 32px;
  margin: 0;
  padding-left: 40%;
  text-transform: uppercase;
  font-weight: 700;
  font-family: "Inconsolata", Arial, sans-serif;
  /* background-color: #5bc0de; */
}
.fpgportfolio-nav #fpgportfolio-logo a span {
  color: #DD356E;
}
.fpgportfolio-nav a {
  padding: 5px 10px;
  color: #000;
}
@media screen and (max-width: 768px) {
  .fpgportfolio-nav .menu-1 {
    display: none;
  }
}
.fpgportfolio-nav ul {
  padding: 0;
  margin: 5px 0 0 0;
}
.fpgportfolio-nav ul li {
  padding: 0;
  margin: 0;
  list-style: none;
  display: inline;
}
.fpgportfolio-nav ul li a {
  font-size: 1vw;
  padding: 30px 15px;
  color: rgba(0, 0, 0, 0.7);
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}
.fpgportfolio-nav ul li a:hover, .fpgportfolio-nav ul li a:focus, .fpgportfolio-nav ul li a:active {
  color: black;
}
.fpgportfolio-nav ul li.has-dropdown {
  position: relative;
}
.fpgportfolio-nav ul li.has-dropdown .dropdown {
  width: 140px;
  -webkit-box-shadow: 0px 14px 33px -9px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 0px 14px 33px -9px rgba(0, 0, 0, 0.75);
  box-shadow: 0px 14px 33px -9px rgba(0, 0, 0, 0.75);
  z-index: 1002;
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: 40px;
  left: 0;
  text-align: left;
  background: #000;
  padding: 20px;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  border-radius: 4px;
  -webkit-transition: 0s;
  -o-transition: 0s;
  transition: 0s;
}
.fpgportfolio-nav ul li.has-dropdown .dropdown:before {
  bottom: 100%;
  left: 40px;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
  border-bottom-color: #000;
  border-width: 8px;
  margin-left: -8px;
}
.fpgportfolio-nav ul li.has-dropdown .dropdown li {
  display: block;
  margin-bottom: 7px;
}
.fpgportfolio-nav ul li.has-dropdown .dropdown li:last-child {
  margin-bottom: 0;
}
.fpgportfolio-nav ul li.has-dropdown .dropdown li a {
  padding: 2px 0;
  display: block;
  color: #999999;
  line-height: 1.2;
  text-transform: none;
  font-size: 13px;
  letter-spacing: 0;
}
.fpgportfolio-nav ul li.has-dropdown .dropdown li a:hover {
  color: #fff;
}
.fpgportfolio-nav ul li.has-dropdown:hover a, .fpgportfolio-nav ul li.has-dropdown:focus a {
  color: #000;
}
.fpgportfolio-nav ul li.btn-cta a {
  padding: 30px 0px !important;
  color: #fff;
}
.fpgportfolio-nav ul li.btn-cta a span {
  background: #dd356e;
  padding: 4px 10px;
  display: -moz-inline-stack;
  display: inline-block;
  zoom: 1;
  *display: inline;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
  -webkit-border-radius: 100px;
  -moz-border-radius: 100px;
  -ms-border-radius: 100px;
  border-radius: 100px;
}
.fpgportfolio-nav ul li.btn-cta a:hover span {
  -webkit-box-shadow: 0px 14px 20px -9px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 0px 14px 20px -9px rgba(0, 0, 0, 0.75);
  box-shadow: 0px 14px 20px -9px rgba(0, 0, 0, 0.75);
}
.fpgportfolio-nav ul li.active > a {
  color: #000 !important;
  position: relative;
}
.fpgportfolio-nav ul li.active > a:after {
  position: absolute;
  bottom: 25px;
  left: 0;
  right: 0;
  content: '';
  width: 30px;
  height: 2px;
  background: #DD356E;
  margin: 0 auto;
}

#fpgportfolio-counter,
.fpgportfolio-bg,
.product {
  background-size: cover;
  background-position: top center;
  background-repeat: no-repeat;
  position: relative;
}

.fpgportfolio-video {
  overflow: hidden;
}
@media screen and (max-width: 992px) {
  .fpgportfolio-video {
    height: 450px;
  }
}
/* ... */

